--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "web-diploma": {
+    "audio-recorder": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/web-diploma",
+            "outputPath": "dist/audio-recorder",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "web-diploma:build"
+            "browserTarget": "audio-recorder:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "web-diploma:build:production"
+              "browserTarget": "audio-recorder:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "web-diploma:build"
+            "browserTarget": "audio-recorder:build"
           }
         },
         "test": {
@@ -118,16 +118,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "web-diploma:serve"
+            "devServerTarget": "audio-recorder:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "web-diploma:serve:production"
+              "devServerTarget": "audio-recorder:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "web-diploma"
+  "defaultProject": "audio-recorder"
 }
